# AtmosphEX

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  heaptrack.main.47868.zst  imgui.ini
include/: Test.hpp
include/Core/: Application.hpp  Engine.hpp
include/Graphics/: Camera.hpp  Cube.hpp  Mesh.hpp  Model.hpp  Shader.hpp  Texture.hpp
include/Input/: Keyboard.hpp
include/UI/: ImguiManager.hpp
include/Utils/: Camera.hpp  GraphicsUtils.hpp  SceneManager.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/tinygltf/: tiny_gltf.h
res/: settings.json
res/shaders/cube/: cube-frag.glsl  cube-ver.glsl  cube.frag  cube.vert
res/shaders/default/: default-frag.glsl  default-vert.glsl  default.frag  default.vert
src/: main.cpp
src/Core/: Application.cpp  Engine.cpp
src/Graphics/: Camera.cpp  Cube.cpp  Cube.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Shader.cpp  Shader.hpp
src/Input/: Keyboard.cpp
src/UI/: ImguiManager.cpp
src/Utils/: Camera.cpp  GraphicsUtils.cpp  SceneManager.cpp
